# cpp-chat-app

./: .clang-format  .clang-tidy  .dockerignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/actions/setup/: action.yml
.github/hooks/: pre-commit
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/src/: client.cpp
core/: CMakeLists.txt
core/include/: Color.h  Layer.h  SocketClient.h  SocketServer.h  Texture.h  Vector.h
core/src/: SocketClient.cpp  SocketServer.cpp  Texture.cpp
gui/: CMakeLists.txt
gui/include/: Gui.h
gui/src/: Gui.cpp
server/: CMakeLists.txt  Dockerfile
server/src/: server.cpp
test/: CMakeLists.txt
test/src/: example.cpp  main.cpp
